// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawerMenu matches the last snapshot 1`] = `
<View>
  <FastImage
    source={null}
  >
    <MockLinearGradient
      colors={
        [
          "rgba(0, 0, 0, 0)",
          "rgba(0, 0, 0, 0.1)",
          "rgba(0, 0, 0, 0.3)",
          "rgba(0, 0, 0, 0.6)",
        ]
      }
    />
    <View>
      <FastImage
        source={
          {
            "uri": "someurl",
          }
        }
      />
      <Text>
        foo
      </Text>
      <View>
        <Button
          iconName="Settings"
          onPress={[MockFunction]}
          text="Settings"
        />
        <Button
          iconName="Invite"
          text="Invite"
        />
      </View>
    </View>
  </FastImage>
  <SectionList
    SectionSeparatorComponent={[Function]}
    renderSectionHeader={[Function]}
    sections={
      [
        {
          "data": undefined,
          "keyExtractor": [Function],
          "renderItem": [Function],
        },
        {
          "data": undefined,
          "keyExtractor": [Function],
          "renderItem": [Function],
        },
      ]
    }
    stickySectionHeadersEnabled={false}
  />
  <Button
    text="Start a Group"
  />
</View>
`;

exports[`GroupRow hides badge when no newPostCount 1`] = `
<View>
  <TouchableOpacity
    onPress={[Function]}
  >
    <FastImage
      source={
        {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`GroupRow highlights when matching currentGroupId 1`] = `
<View>
  <TouchableOpacity
    onPress={[Function]}
  >
    <FastImage
      source={
        {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`GroupRow matches the last snapshot 1`] = `
<View>
  <TouchableOpacity
    onPress={[Function]}
  >
    <FastImage
      source={
        {
          "uri": "foo.png",
        }
      }
    />
    <Text
      ellipsizeMode="tail"
      numberOfLines={1}
    >
      Foom
    </Text>
    <View>
      <Text>
        7
      </Text>
    </View>
  </TouchableOpacity>
</View>
`;

exports[`SectionHeader matches the last snapshot 1`] = `
<View>
  <Text>
    NETWORKED GROUPS
  </Text>
</View>
`;

exports[`TextButton renders 1`] = `
<TouchableOpacity
  hitSlop={
    {
      "bottom": 10,
      "left": 10,
      "right": 15,
      "top": 20,
    }
  }
  onPress={[Function]}
>
  <Text>
    anything
  </Text>
</TouchableOpacity>
`;
